feat(scylladb): scaffold connection and simple query for test purpose
Signed-off-by: Daniel Boll <danielboll.academico@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,10 @@ services:
     build: .
     volumes:
       - .:/home/nodepp
-    command: bash -c "yarn run:only"
+    # command: bash -c "yarn run:only"
+    command: bash -c "LD_LIBRARY_PATH=~/.xmake/packages/s/scylladb/2.16.2b/304ccf82d53742fbaf0040cab4330549/lib yarn run:only"
+
+  # Scylla db
+  scylladb:
+    image: scylladb/scylla
+    container_name: scylla-node
