--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "tsnd --respawn src/index.ts",
     "run:only": "tsnd src/index.ts",
     "build": "tsc -p tsconfig.json",
-    "gen:lib": "node-gyp configure && node-gyp build",
+    "gen:lib": "node-gyp configure && node-gyp rebuild",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
