feat(build): add release build
BREAKING CHANGE: breaking changes on node_modules and previous build

Signed-off-by: Daniel Boll <danielboll.academico@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,12 @@ compile_commands.json
 .cache/
 
 /node_modules/*
-/node_modules/@nodepp/example/binding.node
-!/node_modules/@nodepp/*
+/node_modules/scylladb-driver/binding.node
+!/node_modules/scylladb-driver/*
+
+./lib
+!./lib/index.js
+!./lib/index.d.ts
+!./lib/scripts/*
+
+prebuilds/
