--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "docker compose run nodepp-example bash -c './scripts/build.sh --build'",
     "run:docker": "docker compose run nodepp-example bash -c 'start'",
     "gen:lib": "node-gyp rebuild",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "@nodepp/example": "file:./node_modules/@nodepp/example",
@@ -28,7 +28,11 @@
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.50",
+    "@swc/jest": "^0.2.26",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "jest": "^29.5.0",
     "typescript": "^5.0.3"
   }
 }
